🎮🍰 Checkpoint ./script.js:9625737/424 ./sw.js:9625737/5519 ./.glitch-assets:9625737/378 ./manifest.json:9625737/174 ./style.css:9625737/33

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
       "src": "https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2Ficon_192.png?v=1577211541411",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "https://cdn.glitch.com/45f0801f-7315-41ae-b12c-26a84073b9c6%2Ficon_512.png?v=1577211972492",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": "/",
